syntax = "proto3";

option go_package = "github.com/s77rt/rdpcloud/proto/go/services/secauthz";

package services.secauthz;

import "models/secauthz/user.proto";

message LookupAccountByNameRequest { models.secauthz.User_1 user = 1; }
message LookupAccountByNameResponse { string sid = 1; }

message LookupAccountBySidRequest { string sid = 1; }
message LookupAccountBySidResponse { models.secauthz.User_1 user = 1; }
